--- a/footer.html
+++ b/footer.html
@@ -3,8 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
-
+<div class="content">
+    <div class="top fl-row">
+        <div class="c1">
+            <div class="title cp">关于我们</div>
+            <div class="list-wrap fl-row">
+                <div class="cp">公司简介</div>
+                <div class="cp">企业文化</div>
+            </div>
+            <div class="list-wrap fl-row">
+                <div class="cp">品牌故事</div>
+                <div class="cp">荣誉资质</div>
+            </div>
+            <div class="list-wrap fl-row">
+                <div class="cp">历史沿革</div>
+                <div class="cp">全国布局</div>
+            </div>
+        </div>
+        <div class="c1">
+            <div class="title cp">新闻中心</div>
+            <div class="list-wrap cp">企业新闻</div>
+            <div class="list-wrap cp">行业资讯</div>
+            <div class="list-wrap cp">集团期刊</div>
+        </div>
+        <div class="c1">
+            <div class="title cp">业务布局</div>
+            <div class="list-wrap cp">核心业务</div>
+            <div class="list-wrap cp">成员单位</div>
+        </div>
+        <div class="c1">
+            <div class="title cp">加入周原</div>
+            <div class="list-wrap cp">人才理念</div>
+            <div class="list-wrap cp">招贤纳士</div>
+        </div>
+        <div class="c1">
+            <div class="title cp">联系我们</div>
+            <div class="list-wrap">联系电话：027-87382368
+            </div>
+            <div class="list-wrap">集团地址：武汉市东湖新技术开发区 华师园北路18号光谷科技港
+            </div>
+            <div class="list-wrap">邮编：430200
+            </div>
+        </div>
+        <div class="c6">
+            <div class="top fl-row">
+                <div>关注周原集团</div>
+                <img src="./imgs/wechat.png" alt="">
+            </div>
+            <div class="bottom fl-row">
+                <img src="./imgs/ercode.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="bottom">
+        Copyright © 2020周原集团股份有限公司 版权所有
+    </div>
+</div>
 </body>
 </html>
