--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="./imgs/red_arrow.png" alt=""></div>
     </div>
     <!--大图内容-->
-    <div class="img-content">
+    <div class="img-content img-content-0">
         <div class="red-content">
             <div class="title">物业管理</div>
             <div class="sub-title">ESTATE MANAGEMENT</div>
@@ -85,17 +85,327 @@
             <div class="all">查看全部 ></div>
         </div>
     </div>
+    <div class="img-content img-content-2 hidden">
+        <div class="red-content">
+            <div class="title">商业运营</div>
+            <div class="sub-title">ESTATE MANAGEMENT</div>
+            <div class="menu-wrap">
+                <div class="menu-list fl-row">
+                    <div class="index">01</div>
+                    <div>安全管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">02</div>
+                    <div>设施管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">03</div>
+                    <div>环境管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">04</div>
+                    <div>生活服务</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">05</div>
+                    <div>社区文化</div>
+                </div>
+            </div>
+            <div class="all">查看全部 ></div>
+        </div>
+    </div>
+    <div class="img-content img-content-4 hidden">
+        <div class="red-content">
+            <div class="title">资产管理</div>
+            <div class="sub-title">ESTATE MANAGEMENT</div>
+            <div class="menu-wrap">
+                <div class="menu-list fl-row">
+                    <div class="index">01</div>
+                    <div>安全管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">02</div>
+                    <div>设施管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">03</div>
+                    <div>环境管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">04</div>
+                    <div>生活服务</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">05</div>
+                    <div>社区文化</div>
+                </div>
+            </div>
+            <div class="all">查看全部 ></div>
+        </div>
+    </div>
+    <div class="img-content img-content-6 hidden">
+        <div class="red-content">
+            <div class="title">智慧空间</div>
+            <div class="sub-title">ESTATE MANAGEMENT</div>
+            <div class="menu-wrap">
+                <div class="menu-list fl-row">
+                    <div class="index">01</div>
+                    <div>安全管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">02</div>
+                    <div>设施管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">03</div>
+                    <div>环境管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">04</div>
+                    <div>生活服务</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">05</div>
+                    <div>社区文化</div>
+                </div>
+            </div>
+            <div class="all">查看全部 ></div>
+        </div>
+    </div>
+    <div class="img-content img-content-8 hidden">
+        <div class="red-content">
+            <div class="title">大健康产业</div>
+            <div class="sub-title">ESTATE MANAGEMENT</div>
+            <div class="menu-wrap">
+                <div class="menu-list fl-row">
+                    <div class="index">01</div>
+                    <div>安全管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">02</div>
+                    <div>设施管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">03</div>
+                    <div>环境管理</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">04</div>
+                    <div>生活服务</div>
+                </div>
+                <div class="menu-list fl-row">
+                    <div class="index">05</div>
+                    <div>社区文化</div>
+                </div>
+            </div>
+            <div class="all">查看全部 ></div>
+        </div>
+    </div>
+    <!--内容标题-->
+    <div class="title-wrap fl-row">
+        <div class="line"></div>
+        <div class="text">
+            <div class="main-title">新闻中心</div>
+            <div class="sub-title">NEWS CENTER</div>
+        </div>
+        <div class="line"></div>
+    </div>
+    <!--新闻中心-->
+    <div class="new-wrap fl-row">
+        <div class="left">
+            <div class="swiper-container2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="./imgs/small_banner.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imgs/small_banner.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./imgs/small_banner.png" alt="">
+                    </div>
+                </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+        </div>
+        <div class="right">
+            <div class="title-wrap fl-row">
+                <div class="title-list selected ">
+                    企业新闻
+                    <img src="./imgs/red_arrow.png" alt="">
+                </div>
+                <div class="line"></div>
+                <div class="title-list">
+                    行业资讯
+                    <img src="./imgs/red_arrow.png" alt="">
+                </div>
+            </div>
+            <div class="news-wrap news-wrap-0">
+                <div class="news-list fl-row">
+                    <div class="left">
+                        <div class="bottom"></div>
+                        <div class="top">
+                            <div>24</div>
+                            <div class="day">2020.05</div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="main-title cp">
+                            周原集团与荆州市凤凰街道办签署战略合作协议，助力打造新型城市生活服务模式
+                        </div>
+                        <div class="sub-title">
+                            8月22日，周原集团股份有限公司（以下简称周原集团）与荆州市凤凰街道办事处签订了战略合作协议。按照协议的约定，双方将共同成立周原（荆州）集团股份有限公司...
+                        </div>
+                    </div>
+                </div>
+                <div class="news-list fl-row">
+                    <div class="left">
+                        <div class="bottom"></div>
+                        <div class="top">
+                            <div>24</div>
+                            <div class="day">2020.05</div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="main-title cp">
+                            数字化赋能社区综合服务,“周管家”智慧社区APP迭代上线
+                        </div>
+                        <div class="sub-title">
+                            随着移动互联网的发展，手机里的各类APP已成为人们生活中不可或缺的一...
+                        </div>
+                    </div>
+                </div>
+                <div class="news-list fl-row">
+                    <div class="left">
+                        <div class="bottom"></div>
+                        <div class="top">
+                            <div>24</div>
+                            <div class="day">2020.05</div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="main-title cp">
+                            数字化赋能社区综合服务,“周管家”智慧社区APP迭代上线
+                        </div>
+                        <div class="sub-title">
+                            随着移动互联网的发展，手机里的各类APP已成为人们生活中不可或缺的一...
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="news-wrap hidden news-wrap-2">
+                <div class="news-list fl-row">
+                    <div class="left">
+                        <div class="bottom"></div>
+                        <div class="top">
+                            <div>24</div>
+                            <div class="day">2020.05</div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="main-title cp">
+                            数字化赋能社区综合服务,“周管家”智慧社区APP迭代上线
+                        </div>
+                        <div class="sub-title">
+                            随着移动互联网的发展，手机里的各类APP已成为人们生活中不可或缺的一...
+                        </div>
+                    </div>
+                </div>
+                <div class="news-list fl-row">
+                    <div class="left">
+                        <div class="bottom"></div>
+                        <div class="top">
+                            <div>24</div>
+                            <div class="day">2020.05</div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="main-title cp">
+                            数字化赋能社区综合服务,“周管家”智慧社区APP迭代上线
+                        </div>
+                        <div class="sub-title">
+                            随着移动互联网的发展，手机里的各类APP已成为人们生活中不可或缺的一...
+                        </div>
+                    </div>
+                </div>
+                <div class="news-list fl-row">
+                    <div class="left">
+                        <div class="bottom"></div>
+                        <div class="top">
+                            <div>24</div>
+                            <div class="day">2020.05</div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="main-title cp">
+                            周原集团与荆州市凤凰街道办签署战略合作协议，助力打造新型城市生活服务模式
+                        </div>
+                        <div class="sub-title">
+                            8月22日，周原集团股份有限公司（以下简称周原集团）与荆州市凤凰街道办事处签订了战略合作协议。按照协议的约定，双方将共同成立周原（荆州）集团股份有限公司...
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<!--期刊-->
+<div class="periodical">
+    <div class="periodical-wrap">
+        <div class="text-wrap">
+            <div class="title">
+                《周管家》期刊
+            </div>
+            <div class="sub-title">
+                ZHOUYUAN PERIODICAL
+            </div>
+            <div class="text-content">
+                《周管家》的创刊，是对未来“转化升级，智慧城市”发展的思考，也是基于深耕社区，服务理念升级的探讨，更是对“周管家”物业管理服务平台生态化践行的深度记录。
+            </div>
+            <div class="more cp">
+                点击查看&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;>
+            </div>
+        </div>
+        <img src="./imgs/head.png" alt="">
+    </div>
+</div>
+<!--底部-->
+<iframe src="footer.html" class="footer"></iframe>
 </body>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script>
-    var swiper = new Swiper('.swiper-container', {
-        pagination: {
-            el: '.swiper-pagination'
-        },
-        loop: true
+    $(function () {
+        let bigBanner = new Swiper('.swiper-container', {
+            pagination: {
+                el: '.swiper-pagination'
+            },
+            loop: true
+        })
+        let smallBanner = new Swiper('.swiper-container2', {
+            pagination: {
+                el: '.swiper-pagination'
+            },
+            loop: true,
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev'
+            }
+        })
+
+        $('.title-menu .menu-list').click(function () {
+            $(this).addClass('selected').siblings('.menu-list').removeClass('selected')
+            $('.img-content-' + $(this).index()).show().siblings('.img-content').hide()
+        })
+
+        $('.new-wrap .title-list').click(function () {
+            $(this).addClass('selected').siblings('.title-list').removeClass('selected')
+            $('.news-wrap-' + $(this).index()).show().siblings('.news-wrap').hide()
+        })
     })
 </script>
 </html>
