--- a/header.html
+++ b/header.html
@@ -13,11 +13,15 @@
         <img src="./imgs/logo2.png" class="logo2" alt="">
     </div>
     <div class="menu-wrap fl-row">
-        <div class="menu-list selected">首页</div>
+        <div class="menu-list selected">
+            <a href="index.html" target="_parent">首页</a>
+        </div>
         <div class="menu-list">关于我们</div>
         <div class="menu-list">新闻中心</div>
         <div class="menu-list">业务布局</div>
-        <div class="menu-list">加入周原</div>
+        <div class="menu-list">
+            <a href="joinUs.html" target="_parent">加入周原</a>
+        </div>
         <div class="menu-list">联系我们</div>
     </div>
 </div>
