--- a/joinUs.html
+++ b/joinUs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/joinUs.css">
 </head>
 <body>
-<iframe class="header" src="header.html"></iframe>
+<iframe class="header" id="header" src="header.html"></iframe>
 <div class="bg-wrap">
     <img src="./imgs/join_bg.png" alt="">
 </div>
@@ -25,7 +25,7 @@
         </div>
     </div>
 </div>
-<div class="content">
+<div class="content content-0">
     <div class="title-wrap fl-row">
         <div class="text">
             <div class="main-title">人才理念</div>
@@ -50,14 +50,333 @@
     <div class="small-content small-content-4">
         <div class="btn">去伪求真</div>
         <div class="text-content">创意择优、极度求真，一切促进工作目标达成的意见、
-            建议和讨论都应受到欢迎和支持</div>
+            建议和讨论都应受到欢迎和支持
+        </div>
     </div>
     <div class="small-content small-content-5">
         <div class="btn">创造回报</div>
         <div class="text-content">倡导企业价值与员工价值的共同成长，让每位有渴望、
-            愿付出的员工都能收获成长与财富</div>
+            愿付出的员工都能收获成长与财富
+        </div>
+    </div>
+</div>
+<div class="content content-1 hidden">
+    <div class="title-menu fl-row">
+        <div class="menu-list selected">校园招聘
+            <img src="./imgs/red_arrow.png" alt=""></div>
+        <div class="line"></div>
+        <div class="menu-list ">社会招聘
+            <img src="./imgs/red_arrow.png" alt=""></div>
+    </div>
+    <div class="people-wrap">
+        <div class="people-title">
+            总部职能
+        </div>
+        <div class="peoples">
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="people-title">
+            分子公司
+        </div>
+        <div class="peoples">
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+            <div class="people-list">
+                <div class="top cp fl-row">
+                    <div class="first fl-row">
+                        <img src="./imgs/card.png" alt="">
+                        <div>物业工程员</div>
+                    </div>
+                    <div>3-5年</div>
+                    <div>大专</div>
+                    <div>1人</div>
+                    <div class="end fl-row">
+                        <div>岗位要求</div>
+                        <img src="./imgs/arrow.png" alt="">
+                    </div>
+                </div>
+                <div class="bottom hidden">
+                    <div class="title">
+                        岗位要求：
+                    </div>
+                    <div class="text">
+                        1、负责辖区内设施设备维护及维修；<br/>
+                        2、参与物业交房前期接管验收工作；<br/>
+                        3、熟悉住宅区各类房屋的分布状况，房屋内外结构，附属设备各水、电、气、消防系统的
+                        管线走向，分布状况以及管线主控制位置，充分了解设备的性能和使用状况；<br/>
+                        4、巡视管辖区域，掌握公用设施的运行和完好状况，如发现有损坏、隐患或其他不正常的
+                        情况，应及时组织人员抢修，以确保公共设备完好及正常运行；<br/>
+                        5、负责做好停水停电应急处理等工作，发现停电、停水、火警和其它事故，应迅速到位，
+                        查明事故原因，并采取应急措施；<br/>
+                        6、完成领导交办其他事项；
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <iframe class="footer" src="footer.html"></iframe>
 </body>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(function () {
+        $('.tab-content-menu-list').click(function () {
+            $(this).addClass('selected').siblings('.tab-content-menu-list').removeClass('selected')
+            $('.content-' + $(this).index()).show().siblings('.content').hide()
+        })
+
+        $('.menu-list').click(function () {
+            $(this).addClass('selected').siblings('.menu-list').removeClass('selected')
+        })
+
+        $('.people-list .top').click(function () {
+            $(this).siblings('.bottom').slideToggle()
+        })
+    })
+</script>
 </html>
