--- a/header.html
+++ b/header.html
@@ -19,7 +19,9 @@
         <div class="menu-list">
             <a href="aboutUs.html" target="_parent">关于我们</a>
         </div>
-        <div class="menu-list">新闻中心</div>
+        <div class="menu-list">
+            <a href="newsCenter.html" target="_parent">新闻中心</a>
+        </div>
         <div class="menu-list">业务布局</div>
         <div class="menu-list">
             <a href="joinUs.html" target="_parent">加入周原</a>
@@ -38,6 +40,8 @@
             $('.menu-list:eq(4)').addClass('selected').siblings('.menu-list').removeClass('.selected')
         } else if (url.indexOf('aboutUs') !== -1) {
             $('.menu-list:eq(1)').addClass('selected').siblings('.menu-list').removeClass('.selected')
+        } else if (url.indexOf('newsCenter') !== -1) {
+            $('.menu-list:eq(2)').addClass('selected').siblings('.menu-list').removeClass('.selected')
         }
         $('.menu-list').click(function () {
             $(this).addClass('selected').siblings('.menu-list').removeClass('selected')
